changes for about section page

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Cache-control" content="public;max-age=604800">
     <link rel="icon" href="logo.svg" />
   <style>
     @font-face {
@@ -10,11 +11,11 @@
       /* Add other font properties if needed */
     }
 
-    @font-face {
+    /* @font-face {
       font-family: 'MyCustomFont2';
       src: url('/fonts/MyCustomFont2.woff2') format('woff2');
       /* Add other font properties if needed */
-    }
+    } */
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
