--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Cache-control" content="public;max-age=604800">
-    <link rel="icon" href="logo.svg" />
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Cache-control" content="public;max-age=604800">
+  <link rel="icon" href="logo.svg" />
   <style>
     @font-face {
       font-family: 'Codec Cold Trial';
@@ -15,20 +16,24 @@
       font-family: 'MyCustomFont2';
       src: url('/fonts/MyCustomFont2.woff2') format('woff2');
       /* Add other font properties if needed */
-    } */
+    }
+
+    */
   </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Eusorone Whitepaper"
-    />
-    <title>Eusorone Whitepaper</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Eusorone Whitepaper" />
+  <title>Eusorone Whitepaper</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
