--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="Cache-control" content="public;max-age=604800">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="logo.svg" />
-  <style>
-    @font-face {
-      font-family: 'Codec Cold Trial';
-      src: url('/fonts/codec-cold-cufonfonts/Codec-Cold-Regular-trial.ttf') format('woff2');
-      /* Add other font properties if needed */
-    }
-
-    /* @font-face {
-      font-family: 'MyCustomFont2';
-      src: url('/fonts/MyCustomFont2.woff2') format('woff2');
-      /* Add other font properties if needed */
-    }
-
-    */
-  </style>
   <link rel="stylesheet" type="text/css" charset="UTF-8"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Eusorone Whitepaper" />
   <title>Eusorone Whitepaper</title>
